--- a/Stalker/Stalker.csproj
+++ b/Stalker/Stalker.csproj
@@ -18,4 +18,9 @@
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.2" />
         <PackageReference Include="libphonenumber-csharp" Version="8.13.23" />
     </ItemGroup>
+
+
+    <ItemGroup>
+      <Folder Include="Utils\" />
+    </ItemGroup>
 </Project>
