--- a/Stalker/Stalker.csproj
+++ b/Stalker/Stalker.csproj
@@ -21,6 +21,7 @@
 
 
     <ItemGroup>
+      <Folder Include="Core\Investigation\" />
       <Folder Include="Utils\" />
     </ItemGroup>
 </Project>
